--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,7 @@
 ---
+theme :
+  name : the-minimum
 layout: default
 ---
-<article class="post">
-
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
-
-  <div class="post-content">
-    {{ content }}
-  </div>
-
-</article>
+{% include JB/setup %}
+{% include themes/the-minimum/page.html %}
