--- a/css/style.css
+++ b/css/style.css
@@ -2197,10 +2197,9 @@ aside.comment-bar:active {
   border-radius: 3px;
   -webkit-box-shadow: 1px 1px 1px rgba(0,0,0,0.08);
   box-shadow: 1px 1px 1px rgba(0,0,0,0.08);
-  var: 4;
+  var: 1;
   color: #fff;
   background: rgba(153,204,153,0.7);
-  background: rgba(136,172,219,0.65);
 }
 pre .comment,
 pre .title {
@@ -2734,40 +2733,40 @@ pre .javascript .function {
   font-family: "Microsoft YaHei", "PingFang SC", "Hiragino Sans GB", "WenQuanYi Micro Hei" "Lucida Grande", Verdana, "Helvetica Neue", Arial;
 }
 .tagcloud a.color0 {
-  background: #ba8f6c;
+  background: #88acdb;
 }
 .tagcloud a.color0::before {
-  border-right-color: #ba8f6c;
+  border-right-color: #88acdb;
 }
 .tagcloud a.color1 {
-  background: #ff945c;
+  background: #ffa07a;
 }
 .tagcloud a.color1::before {
-  border-right-color: #ff945c;
+  border-right-color: #ffa07a;
 }
 .tagcloud a.color2 {
-  background: #7b5d5f;
+  background: #f08080;
 }
 .tagcloud a.color2::before {
-  border-right-color: #7b5d5f;
+  border-right-color: #f08080;
 }
 .tagcloud a.color3 {
-  background: #f5c7b7;
+  background: #76becc;
 }
 .tagcloud a.color3::before {
-  border-right-color: #f5c7b7;
+  border-right-color: #76becc;
 }
 .tagcloud a.color4 {
-  background: #cfb7c4;
-}
-.tagcloud a.color4::before {
-  border-right-color: #cfb7c4;
-}
-.tagcloud a.color5 {
   background: #918597;
 }
-.tagcloud a.color5::before {
+.tagcloud a.color4::before {
   border-right-color: #918597;
+}
+.tagcloud a.color5 {
+  background: #6fc0e4;
+}
+.tagcloud a.color5::before {
+  border-right-color: #6fc0e4;
 }
 .tagcloud a.color6 {
   background: #bc8f8f;
@@ -3107,14 +3106,4 @@ body {
 }
 #article-nav {
   background: rgba(158,188,226,0.9);
-}
-body {
-  background: #808080;
-}
-.article-header {
-  border-left: 5px solid #666;
-}
-.article-more-link a {
-  background: #4d4d4d;
-  font-size: 0.8em;
 }
